--- a/client/package.json
+++ b/client/package.json
@@ -23,7 +23,9 @@
     "lucide-react": "^0.376.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-native-share": "^10.2.0",
     "react-router-dom": "^6.21.1",
+    "react-share": "^5.1.0",
     "react-toastify": "^10.0.4",
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7"
