--- a/client/package.json
+++ b/client/package.json
@@ -23,6 +23,7 @@
     "lucide-react": "^0.376.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-loading-skeleton": "^3.4.0",
     "react-native-share": "^10.2.0",
     "react-router-dom": "^6.21.1",
     "react-share": "^5.1.0",
