--- a/client/package.json
+++ b/client/package.json
@@ -28,8 +28,10 @@
     "react-router-dom": "^6.21.1",
     "react-share": "^5.1.0",
     "react-toastify": "^10.0.4",
+    "react-vanilla-tilt": "^1.0.0",
     "tailwind-merge": "^2.3.0",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "vanilla-tilt": "^1.8.1"
   },
   "devDependencies": {
     "@types/react": "^18.2.43",
