apply LazyLoading to App

--- a/client/package.json
+++ b/client/package.json
@@ -27,6 +27,7 @@
     "react-native-share": "^10.2.0",
     "react-router-dom": "^6.21.1",
     "react-share": "^5.1.0",
+    "react-spinners": "^0.14.1",
     "react-toastify": "^10.0.4",
     "react-vanilla-tilt": "^1.0.0",
     "tailwind-merge": "^2.3.0",
