--- a/server/package.json
+++ b/server/package.json
@@ -19,6 +19,7 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.0.0",
     "multer": "^1.4.5-lts.1",
+    "nodemon": "^3.1.4",
     "server": "^1.0.38",
     "validator": "^13.12.0"
   }
